[package]
name = "icyweb"
version = "0.1.0"
edition = "2021"

[dependencies]
iced = "0.13.1"
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0.217", features = ["derive"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
iced = { version = "0.13.1", features = ["webgl"] }
